--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,9 +5,14 @@ agent:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
-  - name: 'Block #1'
+  - name: 'Python unit tests'
     task:
-      jobs:
-        - name: 'Job #1'
+      prologue:
+        commands:
+        - sem-version python 3.7
+        jobs:
+        - name: Pytest
           commands:
-            - checkout
+          - checkout
+          - pip install -r requirements.txt
+          - python -m unittest discover -p 'Test*.py'
