--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Backend/src/start.pyc
 Backend/test/Teststart.pyc
 Backend/test/__init__.pyc
 Backend/test/__pycache__/
+Fontend/node_modules/
+Fontend/package-lock.json
