--- a/Fontend/package.json
+++ b/Fontend/package.json
@@ -1,36 +1,25 @@
 {
-  "name": "fontend",
+  "name": "react-login-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "fsevents": "^2.1.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "axios": "^0.19.2",
+    "react": "^15.5.4",
+    "react-bootstrap": "^0.31.5",
+    "react-bootstrap-tabs": "^1.0.2",
+    "react-dom": "^15.5.4",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^4.1.1",
+    "react-strap": "0.0.1",
+    "reactstrap": "^8.4.1"
+  },
+  "devDependencies": {
+    "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
