--- a/Fontend/package.json
+++ b/Fontend/package.json
@@ -6,7 +6,8 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "axios": "^0.19.2"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
