--- a/Fontend/package.json
+++ b/Fontend/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "react-bootstrap": "^0.31.5",
     "react-bootstrap-tabs": "^1.0.2",
+    "react-native-elements": "^1.2.7",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^4.1.1",
     "react-strap": "0.0.1",
