--- a/Fontend/package.json
+++ b/Fontend/package.json
@@ -11,7 +11,8 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^4.1.1",
     "react-strap": "0.0.1",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "html-to-react": "1.4.2"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
