--- a/Fontend/package.json
+++ b/Fontend/package.json
@@ -5,14 +5,16 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "html-to-react": "1.4.2",
+    "react-arc-text": "^1.0.5",
     "react-bootstrap": "^0.31.5",
     "react-bootstrap-tabs": "^1.0.2",
+    "react-native": "latest",
     "react-native-elements": "^1.2.7",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^4.1.1",
     "react-strap": "0.0.1",
-    "reactstrap": "^8.4.1",
-    "html-to-react": "1.4.2"
+    "reactstrap": "^8.4.1"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
@@ -21,7 +23,8 @@
     "parcel": "^1.12.4",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-scripts": "0.9.5"
+    "react-native-svg": "^12.1.0",
+    "react-scripts": "^0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
