--- a/Fontend/package.json
+++ b/Fontend/package.json
@@ -14,7 +14,8 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^4.1.1",
     "react-strap": "0.0.1",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "prop-types": "latest"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
