--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -11,5 +11,5 @@ blocks:
         - name: Pytest
           commands:
           - checkout
-          - pip install -r requirements.txt
+          - pip3 install -r requirements.txt
           - python -m unittest discover -p 'Test*.py'
